--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,9 +10,9 @@ jobs:
       - name: Deploy to VPS
         uses: appleboy/ssh-action@master
         with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USERNAME }}
-            password: ${{ secrets.SSH_PASSWORD }}
+            host: ${{ 87.236.19.5 }}
+            username: ${{ kadiza3f }}
+            password: ${{ XVhx5ME9 }}
             script: |
                 cd /var/www/html
                 git pull origin main
