--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,3 +16,4 @@ jobs:
             script: |
                 cd /var/www/html
                 git pull origin main
+		sudo systemctl restart nginx
